--- a/CMS.Web/appsettings.json
+++ b/CMS.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=CMSDatabase;Integrated Security=True;Encrypt=True;Trust Server Certificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CMS.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
