--- a/CMS.Web/CMS.Web.csproj
+++ b/CMS.Web/CMS.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,5 +18,12 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\CMS.Repository\CMS.Repository.csproj" />
+	  <ProjectReference Include="..\CMS.Utilities\CMS.Utilities.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Areas\Admin\Controllers\" />
+	  <Folder Include="Areas\Admin\Views\" />
+	  <Folder Include="Areas\Doctor\Controllers\" />
+	  <Folder Include="Areas\Doctor\Views\" />
 	</ItemGroup>
 </Project>
